# Abschlussprojekt_2025

./: .gitignore  .pdm-python  main.py  pyproject.toml
src/: analyze_activity_data.py  analyze_data_GPS.py  ekgdata.py  person.py
