[project]
name = "Abschlussprojekt_2025"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Samuel Marxer", email = "ms6903@mci4me.at"},
]
dependencies = ["gpxpy>=1.6.2", "streamlit>=1.45.1", "plotly>=6.1.2", "matplotlib>=3.10.3"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
